# zulipsis

./: CHANGELOG.md  Cargo.toml  README.md
src/: cli.rs  config.rs  main.rs  zulip_status.rs  zuliprc.rs  zulipsis.rs
